# time_series_analysis

./: .gitignore  README.md  initialize_models.py  pyproject.toml  sample_data.json  samples.csv
.github/workflows/: build_and_release.yml  release.yml
anomaly_detection/: __init__.py  dbscan.py  gaussian_mixture.py  lof.py  main.py  one_class_SVM.py  visualization.py
changepoint_detection/: __init__.py  ensemble.py  inference.py  train.py  utils.py
changepoint_detection_neural/: __init__.py  inference.py  train.py
checkpoint/: neuralprophet.pkl  prophet_scale_0.1.pkl  prophet_scale_0.2.pkl  prophet_scale_0.3.pkl  prophet_scale_0.4.pkl  prophet_scale_0.5.pkl  prophet_scale_0.6.pkl  prophet_scale_0.7.pkl  prophet_scale_0.8.pkl
test_samples/: taylormade.py
tests/: test_ensemble.py  test_inference.py  test_train.py  test_utils.py
tests/samples/: women09.py
tests/test_changepoint_detection/: test_ensemble.py  test_inference.py
