[tool.poetry]
name = "time_series_analysis"
version = "0.1.5"
description = "A time series analysis package"
authors = ["urf94 <urf@mercuryproject.com>"]
readme = "README.md"
packages = [
    { include = "changepoint_detection", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
prophet = "^1.1.5"
neuralprophet = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Include the checkpoint folder in the build
[tool.poetry.include]
include = [
    "checkpoint/**"  # Include all files in the checkpoint folder
]

[tool.poetry.exclude]
exclude = [
    "*.pyc",
    "__pycache__"
]
