[tool.poetry]
name = "time_series_analysis"
version = "0.1.6"
description = "A time series analysis package"
authors = ["urf94 <urf@mercuryproject.com>"]
readme = "README.md"
packages = [
    { include = "changepoint_detection", from = "." }
]
include = [
    { path = "checkpoint", format = "sdist" },
    { path = "dist/*.whl", format = ["wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
prophet = "^1.1.5"
neuralprophet = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"